--- a/app/src/main/res/layout/activity_mapa_cliente_por_llamada.xml
+++ b/app/src/main/res/layout/activity_mapa_cliente_por_llamada.xml
@@ -33,7 +33,7 @@
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:fontFamily="@font/futura"
-          android:text="Nombre del cliente : "
+          android:text="Cliente : "
           android:layout_marginLeft="11dp"
           android:textSize="14sp"
           android:textStyle="bold"/>
