--- a/app/src/main/res/layout/activity_menu_proveedor.xml
+++ b/app/src/main/res/layout/activity_menu_proveedor.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:animateLayoutChanges="true"
     android:background="@drawable/colorosagradient"
     tools:context=".paquetes.Menus.MenuProveedor">
 
@@ -21,27 +23,55 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:textSize="22sp"
-                android:id="@+id/txtNombres"
-                android:text="Cargando...."
-                android:textColor="#fff"
+                android:id="@+id/txtEmpresa"
+                android:layout_marginTop="6dp"
+                android:textStyle="bold"
+                android:fontFamily="@font/futura"
+                android:text=""
+                android:textColor="#fff">
+            </TextView>
+
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:layout_width="match_parent"
+                android:id="@+id/shimmer"
+                app:shimmer_duration="800"
+                android:layout_below="@id/txtEmpresa"
                 android:layout_height="wrap_content">
 
-            </TextView>
+                <LinearLayout
+                    android:id="@+id/linearShimmer"
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:background="#fff"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:textSize="16sp"
+                        android:id="@+id/txtNombres"
+                        android:text=""
+                        android:textStyle="bold"
+                        android:fontFamily="@font/futura"
+                        android:textColor="#fff"
+                        android:layout_marginRight="3dp"
+                        android:layout_height="wrap_content">
+                    </TextView>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:id="@+id/txtEmail"
-                android:layout_marginTop="6dp"
-                android:layout_below="@id/txtNombres"
-                android:textStyle="bold"
-                android:text="Usuario Proveedor"
-                android:textColor="#fff">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:textSize="16sp"
+                        android:id="@+id/txtApellidos"
+                        android:textStyle="bold"
+                        android:fontFamily="@font/futura"
+                        android:textColor="#fff"
+                        android:layout_height="wrap_content">
+                    </TextView>
+                </LinearLayout>
+            </com.facebook.shimmer.ShimmerFrameLayout>
 
-            </TextView>
+
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_height="62dp"
@@ -56,6 +86,7 @@
                 android:layout_width="62dp"
                 />
 
+
         </RelativeLayout>
 
         <GridLayout
@@ -66,40 +97,188 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_margin="5dp"
-                android:orientation="vertical"
-                android:layout_height="match_parent">
 
-                <Button
+            <androidx.cardview.widget.CardView
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="12dp"
+                android:layout_margin="12dp"
+                >
+
+                <LinearLayout
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:backgroundTint="#fff"
-                    android:textSize="18sp"
-                    android:drawableLeft="@drawable/iconuser_proveedor"
-                    android:padding="27sp"
-                    android:gravity="left"
-                    android:background="@drawable/notanredondo"
-                    android:layout_margin="10dp"
-                    android:layout_height="80dp"
-                    android:text="                Mi perfil"/>
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:background="#F9F9F9"
+                    android:padding="16dp">
 
-                <Button
+                    <Button
+                        android:layout_width="80dp"
+                        android:id="@+id/btnPerfil"
+                        android:gravity="center"
+                        android:background="@drawable/btn_user"
+                        android:layout_height="80dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_marginBottom="12dp"
+                        android:text="Mi Perfil"
+                        android:fontFamily="@font/futura"
+                        android:textSize="16sp"
+                        android:textColor="#000000"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="12dp"
+                android:layout_margin="12dp"
+                >
+
+                <LinearLayout
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:backgroundTint="#fff"
-                    android:textSize="18sp"
-                    android:padding="27sp"
-                    android:gravity="left"
-                    android:drawableLeft="@drawable/lista_proveedor"
-                    android:background="@drawable/notanredondo"
-                    android:layout_margin="10dp"
-                    android:layout_height="80dp"
-                    android:text="         Lista de pedidos"/>
+                    android:background="#F9F9F9"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:padding="16dp">
+
+                    <RelativeLayout
+                        android:layout_width="80dp"
+                        android:gravity="center"
+                        android:layout_height="80dp">
+
+                        <Button
+                            android:layout_width="80dp"
+                            android:gravity="center"
+                            android:id="@+id/btnListaPedidosAukdeliver"
+                            android:background="@drawable/miproducto"
+                            android:layout_height="80dp"/>
+
+                    </RelativeLayout>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_marginBottom="12dp"
+                        android:text="Mis productos"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/futura"
+                        android:textColor="#000000"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
 
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="12dp"
+                android:layout_margin="12dp"
+                >
 
-            </LinearLayout>
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:background="#F9F9F9"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:padding="16dp">
+
+                    <RelativeLayout
+                        android:layout_width="80dp"
+                        android:gravity="center"
+                        android:layout_height="80dp">
+
+                        <Button
+                            android:layout_width="80dp"
+                            android:gravity="center"
+                            android:id="@+id/btnAgregarProducto"
+                            android:background="@drawable/btn_lista_pedidos"
+                            android:layout_height="80dp"/>
+
+                    </RelativeLayout>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_marginBottom="12dp"
+                        android:text="Agregar\nProductos"
+                        android:textSize="16sp"
+                        android:textAlignment="center"
+                        android:fontFamily="@font/futura"
+                        android:textColor="#000000"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="12dp"
+                android:layout_margin="12dp"
+                >
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:background="#F9F9F9"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:padding="16dp">
+
+                    <RelativeLayout
+                        android:layout_width="80dp"
+                        android:gravity="center"
+                        android:layout_height="80dp">
+
+                        <Button
+                            android:layout_width="80dp"
+                            android:gravity="center"
+                            android:id="@+id/btnSolicitarDelivery"
+                            android:background="@drawable/btn_lista_pedidos"
+                            android:layout_height="80dp"/>
+
+                    </RelativeLayout>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_marginBottom="12dp"
+                        android:text="Solicitar\nDelivery"
+                        android:textSize="16sp"
+                        android:textAlignment="center"
+                        android:fontFamily="@font/futura"
+                        android:textColor="#000000"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
 
         </GridLayout>
+
+
+
     </LinearLayout>
-</ScrollView>
+
+</LinearLayout>
